# RAG_CHATBOT

./: .gitignore  docker-compose.yaml
backend/app/: .dockerignore  WorkerImage.Dockerfile  alembic.ini  main.py  pyproject.toml
backend/app/api/v1/: router.py
backend/app/clients/: __init__.py  kafka_client.py  qdrant_db_client.py  redis_client.py
backend/app/clients/embedding/: __init__.py  bm25_sparse_encoder.py  embedding_client.py  fastembed_embedding_client.py  openai_embedding_client.py  sparse_encoder.py
backend/app/core/: config.py  constants.py  oauth.py
backend/app/core/model_config/: embedding_model_config.py  pricing_config.py
backend/app/dependencies/: auth.py  clients.py  db.py  repositories.py  services.py
backend/app/exceptions/: base.py  document.py  embedding.py  handler.py  vector_db.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  collection_meta.py  document.py  document_progress_status.py  log.py  model_pricing.py  session.py  user.py
backend/app/repositories/: __init__.py  auth_repository.py  collection_meta_repository.py  collection_metadata_repository.py  document_status_repository.py  log_repository.py  pricing_repository.py
backend/app/repositories/vector_db/: __init__.py  qdrant_repository.py  vector_db_repository.py
backend/app/schemes/: requests.py  responses.py
backend/app/schemes/dto/: document.py  embedding.py  usage.py  (+1 more)
backend/app/services/: model_registry.py
backend/app/utils/: chunker.py
backend/app/workers/: embed_worker.py  index_worker.py  ingest_worker.py  parser_worker.py  runner.py
(+77 files in other folders)
